# point-cloud-utils

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  LICENSE  README.md  index.html  objects.inv  py-sample-mesh.files  py-sample-mesh.includes  pyproject.toml  search.html  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: build-wheels-and-publish-to-pipy.yml  publish-to-test-pypi.yml
about/: index.html
cmake/: DownloadExternalDeps.cmake  FindMKL.cmake  geogram.cmake
conda/point_cloud_utils/: meta.yaml
data/: 1_face_normals.npy  1_faces.npy  1_vertex_colors.npy  1_vertex_normals.npy  1_vertices.npy  bunny.ply  bunny_duplicates.ply  cube_twist.ply  duplicate_vertices.npy  duplicated_pcloud.ply  tree.ply  truck.ply
docs/: make_logo.py  mkdocs.yml
docs/docs/: index.md  make_api_reference.py
docs/docs/imgs/: normal_estimation_procedure
docs/docs/sections/: api_reference.md  calculating_mesh_face_areas.md  cleaning_shapenet.md  closest_point_on_mesh.md  computing_connected_components_of_a_mesh.md  consistently_orienting_mesh_faces.md  deduplicating_point_clouds_and_meshes.md  mesh_decimation.md  mesh_io.md  mesh_normal_estimation.md  mesh_sampling.md  mesh_sdf.md  mesh_smoothing.md  morton_coding.md  point_cloud_normal_estimation.md  point_cloud_resampling.md  ray_mesh_intersection.md  removing_unreferenced_mesh_vertices.md  shape_metrics.md  surfels.md  voxelizing_a_triangle_mesh.md  watertight_manifold.md
examples/: plot_morton_knn_2d.py  plot_morton_knn_3d.py  test_morton_different_sizes.py  test_morton_timings.py
point_cloud_utils/: __init__.py  _mesh_io.py  _mesh_primitives.py  _octree.py  _point_cloud_geometry.py  _pointcloud_normals.py  _ray_mesh.py  _ray_mesh_intersector.py  _ray_point_cloud_intersector.py  _sinkhorn.py  _voxels.py  sinkhorn.py
sample_mesh/: __init__.py
search/: search_index.json
sections/api_reference/: index.html
sections/calculating_mesh_face_areas/: index.html
sections/cleaning_shapenet/: index.html
sections/closest_point_on_mesh/: index.html
sections/computing_connected_components_of_a_mesh/: index.html
sections/consistently_orienting_mesh_faces/: index.html
sections/deduplicating_point_clouds_and_meshes/: index.html
sections/mesh_decimation/: index.html
sections/mesh_io/: index.html
sections/mesh_normal_estimation/: index.html
sections/mesh_sampling/: index.html
sections/mesh_sdf/: index.html
sections/mesh_smoothing/: index.html
sections/morton_coding/: index.html
sections/normal_estimation/: index.html
sections/point_cloud_normal_estimation/: index.html
sections/point_cloud_resampling/: index.html
sections/ray_mesh_intersection/: index.html
sections/ray_surfel_intersection/: index.html
sections/removing_unreferenced_mesh_vertices/: index.html
sections/shape_metrics/: index.html
sections/surfels/: index.html
sections/voxelizing_a_triangle_mesh/: index.html
sections/watertight_manifold/: index.html
sections/watertight_mesh/: index.html
src/: adjacency_list.cpp  closest_point_on_mesh.cpp  common.h  connected_components.cpp  curvature.cpp  decimate_mesh.cpp  face_areas.cpp  fast_winding_numbers.cpp  flood_fill_3d.cpp  geogram_utils.cpp  geogram_utils.h  lloyd.cpp  manifold.cpp  marching_cubes.cpp  mesh_decimate.cpp  mesh_for_voxels.cpp  mesh_normals.cpp  mesh_utils.cpp  meshio.cpp  misc.cpp  morton.cpp  nanoflann.cpp  normals.cpp  octree.cpp  orient_mesh_faces.cpp  point_areas.cpp  point_cloud_distance.cpp  point_cloud_normals.cpp  ray_mesh_intersection.cpp  ray_point_cloud_intersection.cpp  remove_duplicates.cpp  remove_mesh_vertices.cpp  remove_unreferenced_mesh_vertices.cpp  sample.cpp  sample_mesh.cpp  sample_point_cloud.cpp  signed_distance.cpp  smooth.cpp  sparse_voxel_grid.cpp  vcg_utils.h  (+2 more)
src/common/: common.h  embree_intersector.cpp  embree_intersector.h  morton_code.cpp  morton_code.h  numpy_utils.h  obj_loader.h  off_loader.h  ply_loader.h  stl_loader.h  strutil.h  tribox.h
tests/: CMakeLists.txt  test_examples.py
trash/: _octree.py  _sparse_voxels.py
wheel/: point_cloud_utils-0.21.0-cp37-cp37m-win_amd64.whl  point_cloud_utils-0.21.0-py3.7-win-amd64.egg
